--- a/generalstyle.css
+++ b/generalstyle.css
@@ -25,6 +25,48 @@ padding-bottom: 5%;
 height:20px;
 }
 
+/* drop down menu*/
+.dropdown {
+     position: relative;
+     display: inline-block;
+  }
+  
+  .dropdown-content {
+     display: none;
+     position: absolute;
+     right: 0;
+     background-color: #f9f9f9;
+     min-width: 160px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+  }
+  
+.dropdown-content a {
+     color: black;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+}
+  
+.dropdown-content a:hover {background-color:#292920;}
+  
+.dropdown:hover .dropdown-content {
+     display: block;
+}
+  
+.dropdown:hover .dropbtn {
+      border: 2px solid white; 
+}
+
+.dropbtn{
+background-color:none;
+font-family:'Roboto Mono', monospace;
+padding:5px;
+
+}
+
+
+
 /* hvordan retter jeg billedet til*/
 
 main{
@@ -52,5 +94,5 @@ font-size:90px;
 footer{
 display: flex;
 justify-content: space-around;
-padding-bottom:20px;
+padding-bottom:2;
 }
