--- a/cheapeats/artikelstyle.css
+++ b/cheapeats/artikelstyle.css
@@ -13,9 +13,9 @@
     text-decoration:none;
     }
 
-  main a{
+   main a{
     text-decoration:underline;
-  }
+   }
 
 
     /* HEADER*/
@@ -23,17 +23,20 @@
 header{
     display:flex;
     justify-content:space-around;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    height:20px;
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+    height:200px;   
+    border-bottom:1px dotted black;
     }
+
+
     header a:hover{
     font-size: 17px;
     }
     
     
     /* DROP DOWN MENU */
-    /* ????? HVORDAN FÅR JEG DET HVIDE FREM I DROPDOWN"*/
     .dropdown {
     position: relative;
     display: inline-block;
@@ -49,6 +52,7 @@ header{
     z-index: 1;
     border: 2px solid black;
     background-color: white;
+    left:0;
 
     }
       
@@ -72,7 +76,8 @@ header{
     }
     
     /* DROPDOWN MENU SLUT*/
-    
+
+  /* GÆLDER ALLE SIDER*/
 main{ 
    padding-top: 60px;
    padding-bottom: 60px;
@@ -82,7 +87,6 @@ main{
    margin-left:200px;
 
     background-color: white;
-    /*???????HVORDAN FÅR JEG DETTE CENTRERET???????*/
     }
 main #overskrift{
 padding-top:50px;
@@ -95,13 +99,22 @@ text-align: center;
 main p{
 padding:10px;
 }
-
+main li{
+padding:10px;
+margin-left:30px;
+}
 main h3{
 padding-left: 10px;
 padding-right:10px; 
 padding-top:15px;
 padding-bottom:15px; 
 }
+#billedehøjre{
+  float:right;
+  }
+/*GÆLDER ALLE SIDER SLUT*/
+/*GÆLDER ARTIKEL*/
+
 main #intro{
 font-style: italic;
 }
@@ -109,16 +122,108 @@ font-style: italic;
 margin-left:70px;
 }
 
-#billedehøjre{
-float:right;
+/*GÆLDER OPSKRIFTER*/
+
+
+
+.tracking{
+  display: flex;
+  justify-content:space-around;
 }
 
-.ingredienser{
-display: flex;
-justify-content:space-around;
+#instruktioner{
+  border-bottom:1px solid black;
+}
+.instruktioner2{
+  margin-left:30px;
+  margin-right:30px;
+}
+.instruktioner2 li{
+margin-top: 25px;
+margin-left: 25px
+}
+.ingredienserpandekager{
+padding-bottom:195px;
+border-bottom:1px solid black;
+
+}
+/* PANDEKAGER*/
+.ingredienserpandekager h3{
+  border-bottom:1px solid black;
+}
+.ingredienserpandekager #billedehøjre{
+width: 450px;
+height: 400px;}
+
+
+.ingredienserpandekager{
+padding-bottom:195px;
+border-bottom:1px solid black;
+}
+.ingredienserpandekager h3{
+  border-bottom:1px solid black;
+}
+.ingredienserpandekager #billedehøjre{
+width: 450px;
+height: 400px;
+}
+
+/*OMELETTE*/
+
+  .ingredienseromelette h3{
+  border-bottom:1px solid black;
+}
+.ingredienseromelette #billedehøjre{
+width: 450px;
+height: 400px;}
+
+
+.ingredienseromelette{
+padding-bottom:93px;
+border-bottom:1px solid black;
+}
+.ingredienseromelette h3{
+  border-bottom:1px solid black;
+}
+.ingredienseromelette #billedehøjre{
+width: 450px;
+height: 400px;
+}
+
+/*BURRITO*/ 
+.ingredienserburrito h3{
+  border-bottom:1px solid black;
+}
+.ingredienserburrito #billedehøjre{
+width: 450px;
+height:410px;}
+
+
+.ingredienserburrito{
+border-bottom:1px solid black;
+}
+.ingredienserburrito h3{
+  border-bottom:1px solid black;
+}
+.ingredienserburrito #billedehøjre{
+width: 450px;
+height: 400px;
 }
 
 
+
+/* BOOK EN RÅDGIVER*/
+
+#sketch{
+  width:80%;
+  margin-right:10%;
+  margin-left: 10%;
+}
+#sketchoverskrift{
+margin-top: 30px;
+margin-bottom: 30px;
+text-align: center;
+}
     /* FOOTER*/
 footer{
     display: flex;
