--- a/cheapeats/forsidestyle.css
+++ b/cheapeats/forsidestyle.css
@@ -16,17 +16,19 @@ background-size: cover;
 body a{
     text-decoration:none;
 }
+
+
+
 header{
 display:flex;
 justify-content:space-around;
+align-items: center;
 background-color:#292920;
-padding-top: 5%;
-padding-bottom: 5%;
-height:20px;
+height:200px;
 }
 
-/* links styling*/ 
 
+/* links styling*/ 
 
 header a:hover{
 color: #ffeb88;
@@ -47,6 +49,7 @@ font-size: 17px;
      min-width: 160px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
+     left:0;
   }
   
 .dropdown-content a {
